# MStoML

./: .gitignore  LICENSE  MStoML.txt  Notes.md  README.md  environment.yml  gemml.yml  poetry.lock.bak  pre-commit  pyproject.toml  quick_cmds.txt  thunderbird.json
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  modules.html  py-modindex.html  search.html  searchindex.js  skripts.FIA.html  skripts.FIA.rst  skripts.ML.html  skripts.Presentation.html  skripts.VAE.html  skripts.VAE.rst  skripts.helpers.html  skripts.html
docs/_modules/: index.html
docs/_sources/: modules.rst.txt  skripts.FIA.rst.txt  skripts.ML.rst.txt  skripts.VAE.rst.txt  skripts.helpers.rst.txt  skripts.rst.txt
docsource/: conf.py  index.rst  modules.rst  skripts.ML.rst  skripts.Presentation.rst  skripts.rst
mlruns/0/: meta.yaml
skripts/: FIA.ipynb  FIA.py  FIA_Untargeted.ipynb  FIA_try.ipynb  ML4com.ipynb  ML4com.m  environment.yml  helpers.py  quick_cmds.txt  sirius_pipeline.toppas  try.cpp  try.ipynb
skripts/FIA/: FIA.py  FIA_Untargeted.ipynb  FIA_all.ipynb  FIA_explorer.ipynb  FIA_matlab.ipynb  FIA_matlab.py  FIA_oms.ipynb  FIA_oms.py  FIA_significance.ipynb  FIA_untargeted.ipynb  FIAexplorer.ipynb  VAE.ipynb  VAE.py  VAE_keras.py  VAE_smac.ipynb  VAE_smac.py  VAE_smac.sh  VAE_smac_run.py  VAE_smac_torch.ipynb  VAE_smac_torch.py  VAE_torch.py  __init__.py  significance_analysis.py  significance_testing.ipynb  slurm-6676.out  slurm-6695.out  slurm-6696.out  slurm-6697.out  try.ipynb
skripts/KNIME/: DIAMetAlyzer_2.0.knwf
skripts/ML/: DL4com.ipynb  DL4com.py  DL4com_annot.ipynb  DL4com_annot_smac.ipynb  DL4com_example.ipynb  ML4com.ipynb  ML4com.py  ML4com_annot.ipynb  ML4com_annot_smac.ipynb  ML4com_latent.ipynb  ML4com_run.py  ML4com_tsv.ipynb  VAE_FIA.ipynb  __init__.py  group_run.sh  group_run_latent.sh
skripts/Pathways/: cobra_com.ipynb  sbml_visualization.ipynb
(+557 files in other folders)
