[tool.poetry]
name = "mstoml"
version = "0.3.0"
description = "\"Dimensionality reduction and community classification from flow injection mass spectrometry.\""
authors = ["JosuaCarl <josi.carl@gmx.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
swig ="^4.2.1"
keras = "^3.2.0"
torch = "^2.2.2"
pytorch-cuda = "^12.1"
smac = "^2.0.2"
numpy = "^1.26.4"
pandas = "^2.2.1"
pyarrow = "^15.0.2"
plotly = "^5.20.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
torchvision = "^0.17.2"
torchaudio = "^2.2.2"
tqdm = "^4.66.2"
gputil = "^1.4.0"
tensorflow = "^2.16.1"
mat73 = "^0.63"
rsa = "^4.9"
jupyter = "^1.0.0"
configspace = "^0.7.1"
scipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
